# PRG1_Recueil_Exercices

./: CMakeLists.txt
07 - Structure_Enum/: 01-01 - definition.md  01-02 - initialisation.md  01-03 - acces_membres.md  03-02 - Jour de la semaine.md
08 - Chaines de caracteres/: 02-01 - string constructeurs.md  02-02 - string assign append concat.md  02-03 - string acces et substr.md  04-01 - string insert replace et erase.md
10 - Surcharge et Genericite/: 02-04 - tri generique.md
12 - iterator - algorithm - numeric/: 02-03 - que produisent ces codes.md
Exercices/04-Fonctions/: 05-01-Factorielle.cpp  05-02-Fibonacci.cpp
Exercices/05-Flux/: 01-01-Ecriture_dans_un_fichier.cpp  01-02-Lecture_et_ajout_dans_un_fichier.cpp  02-01-Redirection_cin.cpp  03-02-Formattage_infos_etudiants.cpp
Exercices/07-Structure_Enum/: 01-04-Date_Personne.cpp  01-05-est_bissextile.cpp  01-06-Nombre_jours_entre_2_dates.cpp  03-03-Deplacer_point.cpp  03-04-Chiffre_en_toute_lettre.cpp  03-05-Coordonnees_GPS.cpp  date.h  personne.h
Exercices/08-Chaines-de-caracteres/: 03-01-Milieu-chaine-caractere.cpp  03-02-Chiffres_romains.cpp  03-03-Analyse_nombre_entier.cpp  03-04-Nom_acronyme.cpp  03-05-Palindrome.cpp  04-02-Compter_occurences.cpp
Exercices/09-Tableaux/: 01-06-Calcul_vectoriel.cpp  01-07-Stack.cpp  01-08-Jour.cpp  02-03-To_string.cpp  02-04-Rotate_right.cpp  02-05-Supprimer_elements_centraux.cpp  02-06-Supprimer_valeur.cpp  02-07-Rendre_unique.cpp  02-08-Moyenne_notes.cpp  03-02-To_string.cpp  03-03-Remplacement_valeur.cpp  03-04-Span_croissant.cpp  03-05-Ensemble.cpp  03-06-Ensemble_trie.cpp  03-07-Recherche_dichotomique.cpp  04-01-Matrice_vecteur.cpp  04-02-Tableau_2d_caractere.cpp
Exercices/11-Classes/: 11-01-01-Structure_Point.cpp  11-02-01-Point.cpp  11-03-01-Point_avec_constructeur.cpp  11-03-02-Point_avec_limites.cpp  11-03-03-Pays.cpp  11-03-04-Robot.cpp  11-04-01-Point_avec_operateur.cpp  11-04-02-Surcharge_des_operateurs.cpp  11-05-01-Point_avec_identifiant_unique.cpp  11-05-02-Voitures.cpp
Exercices/11-Classes/11-06-04-Messages/: 11-06-04-Messages.cpp  message.cpp  message.h
Exercices/12-Iterator/: 01-01-Memoire.cpp  02-04-Concat_vectors.cpp  02-05-Fusion_alternee.cpp
Exercices/13-Class_generique/: 13-01-01-Class_Coord.cpp  13-01-02-Class_point.cpp
Exercices/14-Gestion_erreurs/: 14-03-02-Somme_n_premiers_entiers.cpp  14-03-03-Vector_erase.cpp  14-05-01-Terminaison_programme_1.cpp
Exercices/99-Exercices_recapitulatifs/99-06-Affichage_CSV/: data.txt  display_csv.cpp  display_csv.h  main.cpp
