cmake_minimum_required(VERSION 3.26)
project(PRG1_Recueil_Exercices)

set(CMAKE_CXX_STANDARD 17)

add_executable(01-04-Date_Personne
        Exercices/07-Structure_Enum/01-04-Date_Personne.cpp)

add_executable(01-05-est_bissextile
        Exercices/07-Structure_Enum/01-05-est_bissextile.cpp)

add_executable(01-06-Nombre_jours_entre_2_dates
        Exercices/07-Structure_Enum/01-06-Nombre_jours_entre_2_dates.cpp)

add_executable(03-03-Deplacer_point
        Exercices/07-Structure_Enum/03-03-Deplacer_point.cpp)

add_executable(03-04-Chiffre_en_toute_lettre
        Exercices/07-Structure_Enum/03-04-Chiffre_en_toute_lettre.cpp)

add_executable(03-05-Coordonnees_GPS Exercices/07-Structure_Enum/03-05-Coordonnees_GPS.cpp)
add_executable(03-01-Milieu-chaine-caractere Exercices/08-Chaines-de-caracteres/03-01-Milieu-chaine-caractere.cpp)
add_executable(03-02-Chiffres_romains Exercices/08-Chaines-de-caracteres/03-02-Chiffres_romains.cpp)
add_executable(03-03-Analyse_nombre_entier Exercices/08-Chaines-de-caracteres/03-03-Analyse_nombre_entier.cpp)
add_executable(03-04-Nom_acronyme Exercices/08-Chaines-de-caracteres/03-04-Nom_acronyme.cpp)
add_executable(03-05-Palindrome Exercices/08-Chaines-de-caracteres/03-05-Palindrome.cpp)
add_executable(04-02-Compter_occurences Exercices/08-Chaines-de-caracteres/04-02-Compter_occurences.cpp)
